<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="3dp">

        <Button android:text="@string/btnIntend" android:id="@+id/btnIntend"
        android:layout_height="0dp"
        android:layout_width="175dp"/>

        <Button android:text="@string/btnChoosePicIntend" android:id="@+id/btnChoosePicIntend"
        android:layout_height="0dp"
        android:layout_width="175dp"
        android:layout_toRightOf="@id/btnIntend" />

        <Button android:text="@string/scanWiFi" android:id="@+id/scanWiFi"
         android:layout_height="wrap_content"
         android:layout_width="175dp"
         android:layout_below="@id/btnIntend"
         android:layout_alignParentLeft="true"/>

       <Button android:text="@string/restoreWiFi" android:id="@+id/restoreWiFi"
           android:layout_height="wrap_content"
           android:layout_width="175dp"
           android:layout_toRightOf="@id/scanWiFi"
           android:layout_below="@id/btnIntend"/>

       <Button android:text="@string/offload" android:id="@+id/offload"
           android:layout_height="wrap_content"
           android:layout_width="175dp"
           android:layout_below="@id/scanWiFi"
           android:layout_alignParentLeft="true"/>

        <Button android:text="@string/showWifiConfiguration" android:id="@+id/showWifiConfiguration"
            android:layout_height="wrap_content"
            android:layout_width="175dp"
            android:layout_below="@id/restoreWiFi"
            android:layout_toRightOf="@id/offload"
           />

        <Button android:text="@string/scanAndChoose" android:id="@+id/scanAndChoose"
            android:layout_height="wrap_content"
            android:layout_width="175dp"
            android:layout_below="@id/offload"
            android:layout_alignParentLeft="true"/>

        <Button android:text="@string/requestWifiSelect" android:id="@+id/requestWifiSelect"
            android:layout_height="wrap_content"
            android:layout_width="175dp"
            android:layout_below="@id/showWifiConfiguration"
            android:layout_toRightOf="@id/scanAndChoose"
            />


        <ListView
            android:id="@+id/listview1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/scanAndChoose"
            android:layout_alignParentLeft="true"></ListView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:id="@+id/textView1" />
    </ScrollView>








</LinearLayout>
